update to save all variables to JSON

--- a/dt-pubquiz-intro.html
+++ b/dt-pubquiz-intro.html
@@ -128,7 +128,7 @@
 								</div>
 							</div>
 							<p id="nameCheck"></p>
-							<button id="submitNamePQ" data-scroll href="#quizstart" type="submit" class="btn btn-theme btn-lg">Take part</button>
+							<button id="submitNamePQ" type="submit" class="btn btn-theme btn-lg">Take part</button>
 						</form>
 					</div>
 				</div>
