--- a/dt-qa.html
+++ b/dt-qa.html
@@ -124,18 +124,18 @@
 
 						<form id="questionForm" class="form-horizontal padd-tb-20">
 							<div class="form-group padd-10">
-								<label for="nameQA" class="col-sm-2 control-label">Your name</label>
+								<label class="col-sm-2 control-label">Your name</label>
 								<div class="col-sm-10">
-									<input type="name" class="form-control" id="nameQA" placeholder="Enter name" required data-error="Please put your Name.">
+									<input id="nameQA" class="form-control" placeholder="Enter name">
 								</div>
 							</div>
 							<div class="form-group padd-10">
-								<label for="questionQA" class="col-sm-2 control-label">Your question</label>
+								<label class="col-sm-2 control-label">Your question</label>
 								<div class="col-sm-10">
-									<textarea id="questionQA" class="form-control" rows="5" placeholder="Enter your question" required></textarea>
+									<input id="questionQA" class="form-control" rows="5" placeholder="Enter your question"></input>
 								</div>
 							</div>
-							<button type="submit" id="submitQA" class="btn btn-theme btn-lg">Submit</button>
+							<button id="submitQA" type="submit" class="btn btn-theme btn-lg">Submit</button>
 						</form>
 					</div>
 				</div><!-- ./container -->
