--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					  </button>
-					  <a class="navbar-brand" href="dt-index.html">DT 04.04.2017</a>
+					  <a class="navbar-brand" href="index.html">DT 04.04.2017</a>
 					</div>
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
@@ -133,7 +133,7 @@
 			<!-- ./fixed-banner -->	
 			
 			<!-- interaction -->	
-			<section id="action" class="padd-tb-120">
+			<section id="action" class="padd-t-40 padd-b-120">
 				<div class="container">
 				
 					<div class="heading text-center padd-b-10 wow fadeIn">
@@ -172,7 +172,7 @@
 			</section>
 			<!-- ./interaction -->
 			
-			<section id="aboutme" class="bg-dark padd-t-60 padd-tb-120">
+			<section id="aboutme" class="bg-dark padd-t-60 padd-b-120">
 				<div class="container">
 
 					<div class="heading text-center padd-b-30 wow fadeIn">
