--- a/dt-pubquiz-intro.html
+++ b/dt-pubquiz-intro.html
@@ -128,7 +128,7 @@
 								</div>
 							</div>
 							<p id="nameCheck"></p>
-							<button id="submitNamePQ" type="submit" class="btn btn-theme btn-lg">Take part</button>
+							<button id="submitNamePQ" data-scroll href="#quizstart" type="submit" class="btn btn-theme btn-lg">Take part</button>
 						</form>
 					</div>
 				</div>
@@ -171,7 +171,6 @@
 						</div>					
 					</div>
 				</div>
-				<hr class="medium">
 			</section>
 
 			
