php mysql connection test for yens

--- a/dt-qa.html
+++ b/dt-qa.html
@@ -135,7 +135,7 @@
 									<input id="questionQA" class="form-control" rows="5" placeholder="Enter your question"></input>
 								</div>
 							</div>
-							<button id="submitQA" type="submit" class="btn btn-theme btn-lg">Submit</button>
+							<button id="submitQA" type="button" class="btn btn-theme btn-lg">Submit</button>
 						</form>
 					</div>
 				</div><!-- ./container -->
