--- a/dt-pubquiz-intro.html
+++ b/dt-pubquiz-intro.html
@@ -160,13 +160,13 @@
 
 						<div class="col-md-6">
 							<div class="heading text-center padd-b-20 wow fadeIn">
-								<h2><strong>Press button to start!</strong></h2>
+								<h2><strong>Press button to play!</strong></h2>
 								<div class="separator center"></div>
 								<h4>Time starts counting as soon as you click</h4>
 							</div>
 
 							<div class="wow fadeIn padd-b-60" style="text-align: center">
-								<button id="startPQ" type="button" class="btn btn-green btn-lg">Play</button>
+								<button id="startPQ" type="button" class="btn btn-green btn-lg">Play!</button>
 							</div>
 						</div>					
 					</div>
