--- a/dt-qa.html
+++ b/dt-qa.html
@@ -132,7 +132,7 @@
 							<div class="form-group padd-10">
 								<label class="col-sm-2 control-label">Your question</label>
 								<div class="col-sm-10">
-									<input id="questionQA" class="form-control" rows="5" placeholder="Enter your question"></input>
+									<input id="questionQA" class="form-control" rows="5" placeholder="Enter question (max. 140 characters)"></input>
 								</div>
 							</div>
 							<button id="submitQA" type="button" class="btn btn-theme btn-lg">Submit</button>
