--- a/dt-qa.html
+++ b/dt-qa.html
@@ -153,7 +153,7 @@
 						</div>
 						<div class="col-md-6">
 							<ul class="list-inline pull-right">
-								<li><a traget="_blank" href="https://www.facebook.com/oliver.queck"" class="icon-holder small circle"><i class="fa fa-facebook"></i></a></li>
+								<li><a traget="_blank" href="https://www.facebook.com/oliver.queck" class="icon-holder small circle"><i class="fa fa-facebook"> </i></a></li>
 								<li><a traget="_blank" href="https://www.xing.com/profile/Oliver_Queck2" class="icon-holder small circle"><i class="fa fa-xing"></i></a></li>
 								<li><a traget="_blank" href="https://de.linkedin.com/in/oliverqueck" class="icon-holder small circle"><i class="fa fa-linkedin"></i></a></li>
 								<li><a href="mailto:oliver@queck.io" class="icon-holder envelope small circle"><i class="fa fa-envelope"></i>
@@ -205,10 +205,6 @@
 		<!-- countdown -->
 		<script type="text/javascript" src="plugins/countdown/jquery.countdown.min.js"></script> 
 		
-		<!-- gmaps  -->
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-		<script type="text/javascript" src="plugins/gmaps/gmaps.js"></script>	  
-	
 		<!-- smooth-scroll -->
 		<script type="text/javascript" src="plugins/smooth-scroll/smooth-scroll.js"></script> 
 		
