--- a/dt-pubquiz-intro.html
+++ b/dt-pubquiz-intro.html
@@ -112,7 +112,7 @@
 			<!-- /header -->
 						
 			<!-- interaction -->	
-			<section class="padd-t-90">
+			<section id="getusername" class="padd-t-90">
 				<div class="container">
 				
 					<div class="heading text-center padd-b-10 wow fadeIn">
@@ -127,19 +127,17 @@
 									<input type="text" class="form-control" id="namePQ" maxLength="25" placeholder="Enter name">
 								</div>
 							</div>
-							<p id="nameCheck"></p>
-							<button id="submitNamePQ" data-scroll href="#quizstart" type="submit" class="btn btn-theme btn-lg">Take part</button>
+							<p id="nameCheck" style="color: darkred"></p>
+							<button id="submitNamePQ" type="submit" class="btn btn-theme btn-lg">Take part</button>
 						</form>
-					</div>
-				</div>
 				<hr class="medium">
 			<!-- ./container -->
 			</section>
 			<!-- ./interaction -->
 
-			<section id="quizStart">
+			<section id="quizStart" class="padd-b-60">
 				<div class="container">
-					<div class="row">
+					<div class="row padd-b-120">
 						<div class="col-md-6">
 							<div class="heading text-center padd-b-10 wow fadeIn">
 								<h2><strong>Introduction</strong></h2>
@@ -158,14 +156,14 @@
 							</div>
 						</div>
 
-						<div class="col-md-6">
+						<div class="col-md-6 padd-b-90">
 							<div class="heading text-center padd-b-20 wow fadeIn">
-								<h2><strong>Press button to play!</strong></h2>
+								<h2><strong>Play!</strong></h2>
 								<div class="separator center"></div>
 								<h4>Time starts counting as soon as you click</h4>
 							</div>
 
-							<div class="wow fadeIn padd-b-60" style="text-align: center">
+							<div class="wow fadeIn" style="text-align: center">
 								<button id="startPQ" type="button" class="btn btn-green btn-lg">Play!</button>
 							</div>
 						</div>					
