--- a/index.html
+++ b/index.html
@@ -147,7 +147,6 @@
 								<i class="icon icon-speedometer"></i>
 								<h4>1. Yes or No?</h4>	
 								<a href="dt-yesno.html" class="btn btn-blue btn-sm"><b>Action</b></a>
-
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
@@ -155,7 +154,6 @@
 								<i class="icon icon-bubbles"></i>
 								<h4>2. Questions</h4>	
 								<a href="dt-qa.html" class="btn btn-blue btn-sm"><b>Action</b></a>
-
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
@@ -163,7 +161,6 @@
 								<i class="icon icon-trophy"></i>
 								<h4>3. Pub Quiz</h4>	
 								<a href="dt-pubquiz-intro.html" class="btn btn-blue btn-sm"><b>Action</b></a>
-
 							</div>
 						</div>
 					</div>
@@ -260,6 +257,7 @@
 								<li><a traget="_blank" href="https://www.xing.com/profile/Oliver_Queck2" class="icon-holder small circle"><i class="fa fa-xing"></i></a></li>
 								<li><a traget="_blank" href="https://de.linkedin.com/in/oliverqueck" class="icon-holder small circle"><i class="fa fa-linkedin"></i></a></li>
 								<li><a href="mailto:oliver@queck.io" class="icon-holder envelope small circle"><i class="fa fa-envelope"></i>
+								<li><a href="dt-pubquiz-intro.html" class="icon-holder question small circle"><i class="fa fa-question"></i>
 								</a></li>
 							</ul>
 						</div>	
