--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 							<h3>Oliver Queck</h3>
 							<h4>Digital entrepreneur</h4>
 							<hr>
-							<p>My strategy is called "doing things". That's why I had to jump out of the comfort zone of an executive management position with a major German company into the adventure and challenge of building my own company. Togehter with 2 co-founders I am pushing the integration of refugees into labour marekt with the digital plattform <a target="_blank" href="https://jobkraftwerk.com" >JobKraftwerk.com</a>.</p>
+							<p>My strategic plan is called "doing things". That's why I had to jump out of the comfort zone of an executive management position with a major German company into the adventure and challenge of building my own company. Togehter with 2 co-founders I am pushing the integration of refugees into labour market with the digital plattform <a target="_blank" href="https://jobkraftwerk.com">JobKraftwerk.com</a>.</p>
 							<p>Manage and don't get managed is one of the major differences to the coporate world!</p>
 							<hr>
 							<ul class="list-inline">
