--- a/dt-yesno.html
+++ b/dt-yesno.html
@@ -7,8 +7,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->   
-		<meta name="description" content="Clarity is a Bootstrap-based, Responsive HTML5 Template">
-		<meta name="author" content="bootstrapwizard.info">
+		<meta name="description" content="Digital Tuesday interaction app">
+		<meta name="author" content="queck.io">
 					
 		<!-- Font Awesome CSS -->
 		<link href="css/font-awesome/font-awesome.min.css" rel="stylesheet">
