--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
 						</div>
 						<div class="col-md-4 col-sm-4">
 							<div class="feature-box4 padd-10 text-center">
-								<i class="icon icon-trophy"></i>
-								<h4>3. Pub Quiz</h4>	
-								<a href="dt-pubquiz-intro.html" class="btn btn-blue btn-sm"><b>Action</b></a>
+								<i class="icon icon-compass"></i>
+								<h4>4. Feedback</h4>	
+								<a href="dt-feedback.html" class="btn btn-blue btn-sm"><b>Action</b></a>
 							</div>
 						</div>
 					</div>
