--- a/dt-pubquiz-intro.html
+++ b/dt-pubquiz-intro.html
@@ -116,7 +116,7 @@
 				<div class="container">
 				
 					<div class="heading text-center padd-b-10 wow fadeIn">
-						<h2><strong>3. Pub Quiz</strong></h2>
+						<h2><strong>Pub Quiz</strong></h2>
 						<div class="separator center"></div>
 						<h4>Wanna win a "magical" price?</h4>
 						<h4>If yes, enter your name, take part and answer 4 questions on startups!</h4>
