--- a/dt-qa.html
+++ b/dt-qa.html
@@ -117,7 +117,7 @@
 				<div class="container">
 				
 					<div class="heading text-center padd-b-10 wow fadeIn">
-						<h2><strong>2. Questions</strong></h2>
+						<h2><strong>Questions</strong></h2>
 						<div class="separator center"></div>
 						<h4>Put your questions here.</h4>
 						<h4>We will discuess them in the Q&A at the end of my session</h4>
