--- a/index.html
+++ b/index.html
@@ -144,22 +144,22 @@
 					<div class="row wow fadeInUp">
 						<div class="col-md-4 col-sm-4">
 							<div class="feature-box4 padd-10 text-center">
-								<i class="icon icon-speedometer"></i>
-								<h4>1. Yes or No?</h4>	
-								<a href="dt-yesno.html" class="btn btn-blue btn-sm"><b>Action</b></a>
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<div class="feature-box4 padd-10 text-center">
 								<i class="icon icon-bubbles"></i>
-								<h4>2. Questions</h4>	
+								<h4>Questions</h4>	
 								<a href="dt-qa.html" class="btn btn-blue btn-sm"><b>Action</b></a>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
 							<div class="feature-box4 padd-10 text-center">
+								<i class="icon icon-speedometer"></i>
+								<h4>Warm-up: Yes or No?</h4>	
+								<a href="dt-yesno.html" class="btn btn-blue btn-sm"><b>Action</b></a>
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-4">
+							<div class="feature-box4 padd-10 text-center">
 								<i class="icon icon-compass"></i>
-								<h4>4. Feedback</h4>	
+								<h4>Feedback</h4>	
 								<a href="dt-feedback.html" class="btn btn-blue btn-sm"><b>Action</b></a>
 							</div>
 						</div>
