--- a/dt-yesno.html
+++ b/dt-yesno.html
@@ -117,7 +117,7 @@
 				<div class="container">
 				
 					<div class="heading text-center padd-b-10 wow fadeIn">
-						<h2><strong>Warm-up: Yes or No?</strong></h2>
+						<h2><strong>Warm-up</strong></h2>
 						<div class="separator center"></div>
 						<h4>Shall we start with a little group exercise?</h4>
 						<h4>If yes, click yes. If no, click no. The majority will make it!</h4>
