--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						<div class="col-md-4 col-sm-4">
 							<div class="feature-box4 padd-10 text-center">
 								<i class="icon icon-speedometer"></i>
-								<h4>Warm-up: Yes or No?</h4>	
+								<h4>Warm-up</h4>	
 								<a href="dt-yesno.html" class="btn btn-blue btn-sm"><b>Action</b></a>
 							</div>
 						</div>
