--- a/dt-feedback.html
+++ b/dt-feedback.html
@@ -117,7 +117,7 @@
 				<div class="container">
 				
 					<div class="heading text-center padd-b-10 wow fadeIn">
-						<h2><strong>Feedback</strong></h2>
+						<h2><strong>Feedback!</strong></h2>
 						<div class="separator center"></div>
 						<h4>Temperature check!</h4>
 						<h4>Just give me a short impression about your experience today.</h4>
