--- a/index.html
+++ b/index.html
@@ -136,30 +136,29 @@
 				<div class="container">
 				
 					<div class="heading text-center padd-b-10 wow fadeIn">
-						<h2><strong>Action</strong></h2>
+						<h2><strong>INTERACTION</strong></h2>
 						<div class="separator center"></div>
-						<h3>You can shape this session!</h3>
-						
+						<h3>You can shape this session!</h3>	
 					</div>
 					<div class="row wow fadeInUp">
 						<div class="col-md-4 col-sm-4">
 							<div class="feature-box4 padd-10 text-center">
 								<i class="icon icon-bubbles"></i>
-								<h4>Questions</h4>	
+								<h4>Questions?</h4>	
 								<a href="dt-qa.html" class="btn btn-blue btn-sm"><b>Action</b></a>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
 							<div class="feature-box4 padd-10 text-center">
 								<i class="icon icon-speedometer"></i>
-								<h4>Warm-up</h4>	
+								<h4>Warm-up!</h4>	
 								<a href="dt-yesno.html" class="btn btn-blue btn-sm"><b>Action</b></a>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
 							<div class="feature-box4 padd-10 text-center">
 								<i class="icon icon-compass"></i>
-								<h4>Feedback</h4>	
+								<h4>Feedback!</h4>	
 								<a href="dt-feedback.html" class="btn btn-blue btn-sm"><b>Action</b></a>
 							</div>
 						</div>
